add start.sh to rabbit apps and change server_ip to iast_manager_ip