@@ -1,6 +1,6 @@
 #! /bin/bash
 if [[ -z "${IAST_MANAGER_IP}" ]]; then
-  java -jar java-http-propagator.jar
+  java -jar java-rabbitmq-http-entry-point.jar
 else
   cwd=$(pwd)
   mkdir /usr/local/cxiast-agent
@@ -11,5 +11,5 @@ else
   chmod a+x CxIAST.sh
   echo "maxStoredStringLength=50" >>cx_agent.override.properties
   cd ${cwd}
-  /usr/local/cxiast-agent/CxIAST.sh -e "java -jar java-http-propagator.jar"
+  java -javaagent:/usr/local/cxiast-agent/cx-launcher.jar -Xverify:none -Dcx.standalone=yes -jar java-rabbitmq-http-entry-point.jar
 fi
